# mvd-shuttle

./: Cargo.toml
migrations/: 20250203160923_start-db.sql  20250203161852_seed-db.sql  20250205231206_seeding-activities.sql
src/: lib.rs  main.rs
src/controllers/: medical_society.rs  members.rs  mod.rs  spaces.rs  users.rs
src/errors/: mod.rs
src/helpers/: hash_password.rs  mod.rs
src/middlewares/: auth.rs  auth_middleware.rs  role.rs
src/models/: space.rs
src/repository/: mod.rs  space.rs
src/utils/: mod.rs
