[package]
name = "mvd-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.3"
axum-extra = { version = "0.9.1", features = ["typed-header"] }
chrono = "0.4.39"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shuttle-axum = { version = "0.51.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.51.0"
shuttle-shared-db = { version = "0.51.0", features = ["postgres"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing-subscriber = "0.3.17"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
rand = "0.9.0"
uuid = { version = "1.12.1", features = ["serde", "v4", "js"] }
tower-http = { version = "0.6.2", features = ["cors"] }
cookie = "0.18.1"
